--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "npm run build && scp -r ./build/* ramamosa@178.154.210.56:/home/ramamosa/frontend"
   },
   "eslintConfig": {
     "extends": [
